--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -1,7 +1,34 @@
-*{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+/* devanagari */
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJbecnFHGPezSQ.woff2) format('woff2');
+  unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJnecnFHGPezSQ.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJfecnFHGPc.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+* {
+  font-family: "Poppins", sans-serif;
+}
 #mapid {
   height: 100vh;
 }
@@ -9,29 +36,135 @@
   width: 100%;
 }
 
+.main-container {
+  width: 100vw;
+}
 
-
-
-#more-info-button {
-  margin-top: 10px;
-  background-color: rgb(41,86,141);
+/* Info Buttons */
+.info-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+  font-size: 25px;
   z-index: 999;
+  cursor: pointer;
+  background-color: rgb(255, 255, 255);
+  width: 45px;
+  height: 45px;
+  border-radius: 100px;
+  text-align: center;
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
   
 }
 
+#more-covid-info .icon {
+  font-size: 1.5rem;
+  color: rgb(0, 148, 25);
+}
+
+#more-country-info .icon {
+  font-size: 1.5rem;
+  color: rgb(7, 3, 243);
+}
+#more-weather-info .icon {
+  font-size: 1.5rem;
+  color: rgb(255, 0, 0);
+}
 
 
+#iss-button .icon{
+font-size: 1.5rem;
+color: rgb(236, 134, 219);
+}
+
+.info-icon {
+  color: rgb(7, 3, 243);
+}
+
+.virus-icon {
+  color: rgb(0, 148, 25);
+}
+
+.city-icon {
+  color: rgb(109, 0, 128);
+}
+
+.weather-icon {
+  color:  rgb(255, 0, 0);
+}
+
+.satellite-popup{
+  display: none;
+}
+
+.arrow_box {
+  margin-top: 10px;
+	position: relative;
+  background: #ffffff;
+  color: rgb(102, 100, 100);
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(131, 131, 131,0.75);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(131, 131, 131,0.75);
+  box-shadow: 0px 3px 5px 0px rgba(131, 131, 131,0.75);
+  font-size: 16px;
+  height: 35px;
+  padding: 40px;
+  border-radius: 5px;
+  padding: 5px;
+  text-align: center;
+}
+.arrow_box:after, .arrow_box:before {
+	bottom: 100%;
+	left: 50%;
+	border: solid transparent;
+	content: "";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.arrow_box:after {
+	border-color: rgba(255, 255, 255, 0);
+	border-bottom-color: #ffffff;
+	border-width: 10px;
+	margin-left: -10px;
+}
+.arrow_box:before {
+	border-color: rgba(0, 0, 0, 0);
+	border-width: 13px;
+	margin-left: -13px;
+}
+
+/* Navbar & loading */
 #navbar {
   margin: 0 auto;
   background: none;
-  width: 20%;
+  width: 30%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 1500;
+}
+
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  left: 0px;
+  top: 80px;
+  z-index: 1000000;
+}
+#navbar select {
+  width: 250px;
 }
 
 #loadingDiv {
-  
   z-index: 9000000;
   width: 100px;
   position: absolute;
@@ -39,117 +172,188 @@
   left: 80px;
 }
 
-.leaflet-popup-content-wrapper{
-  background-color:rgb(10, 13, 66);
-  color: white;
+/* Leaflet Styles */
+.leaflet-popup-content-wrapper {
+  background-color: rgb(240, 248, 255);
+  color: rgb(78, 78, 78);
+}
+  
+.leaflet-popup-content table {
+  margin: 5px -5px 5px 5px;
+}
+
+.leaflet-popup-content-wrapper .capital-weather .icon {
+  color: #ff7b00;
+  font-size: 1.5rem;
+}
+
+.leaflet-popup-content-wrapper .earthquake-table .icon {
+  font-size: 1.5rem;
+  color: rgb(98, 27, 27);
+}
+
+.leaflet-popup-content-wrapper .places .icon {
+  font-size: 1.5rem;
+  color: rgb(139, 0, 121);
+}
+.weather-station .icon {
+  font-size: 1.5rem;
+  color: rgb(113,0,0);
 }
 
 .leaflet-popup-content-wrapper a {
   color: #ff993a;
 }
-
-.table{
-  color: white;
-  margin-left: 25px;
-  margin-right: 25px;
+.leaflet-popup-content-wrapper {
+  width: auto;
 }
 
-hr{
-  color: white;
+.leaflet-popup-content {
+  margin: 0;
+  width: auto;
+  padding-right: 20px;
+  background-color: rgb(240, 248, 255);
+  border-radius: 30px;
 }
-#more-info {
-  height: 100%;
-  width: 300px;
+
+
+/*Info Tables */
+.more-info {
   z-index: 1000;
   position: absolute;
   display: none;
-  box-shadow: 5px 5px 10px black;
-  background-color:rgb(10, 13, 66);
-  left: 0;
-  bottom:0;
-  color: rgb(255, 255, 255);
-}
-.info-container{
-  display: flex;
-  flex-direction: column;
+  left: 60px;
+  top: 10px;
+  z-index: 1000;
+  max-height: 90vh;
+  overflow-y: auto;
+  color: rgb(155, 155, 155);
+  border-radius: 10px;
 }
 
-.table-header{
-  text-align: center;
+#more-country-info table {
+  min-width: 500px;
+  border-radius: 10px;
 }
 
-#weather-info {
-  width: 100%;
-  margin: 0 auto;
-  text-align: center;
+#more-weather-info table {
+  min-width: 300px;
 }
-
+#more-covid-info table {
+  min-width: 400px;
+}
 
 #country-flag {
-  margin: 5px auto;
-  max-width: 300px;
-  max-height:300px;
+  margin: 0 auto;
+  max-width: 100px;
+  max-height: 50px;
   border: 2px solid black;
   align-items: center;
 }
 
-.img-container{
+.img-container {
   text-align: center;
 }
-
-.main-container {
-  width: 100vw;
+.more-info tbody tr:nth-child(odd){
+  background-color: rgb(233, 232, 232);
 }
 
-@media only screen and (max-width: 950px) {
-  #navbar {
-    width: 60%;
-  }
 
-h3 {
-  font-size: 1.2em;
-}
-h4{
-  font-size: 1em;
-}
-.info-container{
-
-  flex-direction: row;
-}
-#country-flag{
-  max-width: 150px;
-}
-.weather-info{
-  border-top: 1px solid white;
-  width: 50%
-}
-
-.country-info{
-  border-top: 1px solid white;
- border-right: 1px solid white;
-  width: 50%
-}
-  #more-info {
-    
-    height: auto;
-    width: 100%;
-  }
-
-  .table{
-    font-size: 0.8rem;
-    overflow: scroll;
-    margin: 0;
-  }
-
-}
-
-@media only screen and (max-width: 400px) {
-
+tr:last-child td:first-child { border-bottom-left-radius: 10px; }
+tr:last-child td:last-child { border-bottom-right-radius: 10px; }
 
 
 td{
-  padding: 5px;
-}
+  vertical-align: middle;
 }
 
-  
+tr{
+  vertical-align: middle;
+}
+
+td:nth-child(1) {
+  text-align: center;
+  color: rgb(102, 100, 100);
+}
+
+td:nth-child(2) {
+  font-size: 14px;
+}
+
+td:nth-child(3) {
+  font-size: 16px;
+  text-align: right;
+  color: rgb(87, 86, 86);
+  padding-right: 30px;
+}
+
+
+.table {
+  max-width: 300px;
+  overflow-y: scroll;
+  background-color: aliceblue;
+  border-radius: 10px;
+  margin-bottom: 0;
+}
+
+/*Media Queries*/
+
+@media only screen and (max-width: 1373px){
+  .more-info{
+    top: 50px;
+  }
+  }
+
+
+@media only screen and (max-width: 960px) {
+  #navbar {
+    width: 70%;
+  }
+
+  #more-country-info table {
+    width: 100vw;
+  }
+
+  #navbar select{
+    width: 100%;
+  }
+
+  h3 {
+    font-size: 1.2em;
+  }
+  h4 {
+    font-size: 1em;
+  }
+  .info-container {
+    flex-direction: row;
+  }
+  #country-flag {
+    max-width: 100px;
+  }
+
+  .more-info {
+    left: 0px;
+    top: initial;
+    bottom: 0px;
+    width: 100%;
+    max-height: 40vh;
+    min-height: 0;
+    overflow-y: scroll;
+    border-radius: 0px;
+    -webkit-box-shadow: 0px 3px 17px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 3px 17px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 3px 17px 0px rgba(0,0,0,0.75);
+  }
+  #more-country-info table {
+    max-width: 100%;
+    min-width: 0;
+  }
+
+  .table {
+    max-width: 100%;
+    min-width: 0;
+  }
+
+}
+
+
