--- a/libs/css/styles.css
+++ b/libs/css/styles.css
@@ -1,29 +1,36 @@
 /* devanagari */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJbecnFHGPezSQ.woff2) format('woff2');
-  unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJbecnFHGPezSQ.woff2)
+    format("woff2");
+  unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8,
+    U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
 /* latin-ext */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJnecnFHGPezSQ.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJnecnFHGPezSQ.woff2)
+    format("woff2");
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
+    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJfecnFHGPc.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url(https://fonts.gstatic.com/s/poppins/v15/pxiEyp8kv8JHgFVrJJfecnFHGPc.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
 }
 
 * {
@@ -55,10 +62,9 @@
   height: 45px;
   border-radius: 100px;
   text-align: center;
-  -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-  
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 #more-covid-info .icon {
@@ -75,10 +81,9 @@
   color: rgb(255, 0, 0);
 }
 
-
-#iss-button .icon{
-font-size: 1.5rem;
-color: rgb(236, 134, 219);
+#iss-button .icon {
+  font-size: 1.5rem;
+  color: rgb(236, 134, 219);
 }
 
 .info-icon {
@@ -94,21 +99,21 @@ color: rgb(236, 134, 219);
 }
 
 .weather-icon {
-  color:  rgb(255, 0, 0);
+  color: rgb(255, 0, 0);
 }
 
-.satellite-popup{
+.satellite-popup {
   display: none;
 }
 
 .arrow_box {
   margin-top: 10px;
-	position: relative;
+  position: relative;
   background: #ffffff;
   color: rgb(102, 100, 100);
-  -webkit-box-shadow: 0px 3px 5px 0px rgba(131, 131, 131,0.75);
-  -moz-box-shadow: 0px 3px 5px 0px rgba(131, 131, 131,0.75);
-  box-shadow: 0px 3px 5px 0px rgba(131, 131, 131,0.75);
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(131, 131, 131, 0.75);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(131, 131, 131, 0.75);
+  box-shadow: 0px 3px 5px 0px rgba(131, 131, 131, 0.75);
   font-size: 16px;
   height: 35px;
   padding: 40px;
@@ -116,27 +121,28 @@ color: rgb(236, 134, 219);
   padding: 5px;
   text-align: center;
 }
-.arrow_box:after, .arrow_box:before {
-	bottom: 100%;
-	left: 50%;
-	border: solid transparent;
-	content: "";
-	height: 0;
-	width: 0;
-	position: absolute;
-	pointer-events: none;
+.arrow_box:after,
+.arrow_box:before {
+  bottom: 100%;
+  left: 50%;
+  border: solid transparent;
+  content: "";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
 }
 
 .arrow_box:after {
-	border-color: rgba(255, 255, 255, 0);
-	border-bottom-color: #ffffff;
-	border-width: 10px;
-	margin-left: -10px;
+  border-color: rgba(255, 255, 255, 0);
+  border-bottom-color: #ffffff;
+  border-width: 10px;
+  margin-left: -10px;
 }
 .arrow_box:before {
-	border-color: rgba(0, 0, 0, 0);
-	border-width: 13px;
-	margin-left: -13px;
+  border-color: rgba(0, 0, 0, 0);
+  border-width: 13px;
+  margin-left: -13px;
 }
 
 /* Navbar & loading */
@@ -177,7 +183,7 @@ color: rgb(236, 134, 219);
   background-color: rgb(240, 248, 255);
   color: rgb(78, 78, 78);
 }
-  
+
 .leaflet-popup-content table {
   margin: 5px -5px 5px 5px;
 }
@@ -198,7 +204,7 @@ color: rgb(236, 134, 219);
 }
 .weather-station .icon {
   font-size: 1.5rem;
-  color: rgb(113,0,0);
+  color: rgb(113, 0, 0);
 }
 
 .leaflet-popup-content-wrapper a {
@@ -216,7 +222,6 @@ color: rgb(236, 134, 219);
   border-radius: 30px;
 }
 
-
 /*Info Tables */
 .more-info {
   z-index: 1000;
@@ -228,7 +233,6 @@ color: rgb(236, 134, 219);
   max-height: 90vh;
   color: rgb(155, 155, 155);
   border-radius: 10px;
-
 }
 
 .deleteMeetingClose {
@@ -242,14 +246,12 @@ color: rgb(236, 134, 219);
 .more-info thead {
   display: table;
   width: 100%;
-  color: black; 
+  color: black;
 }
 
-
-
 .more-info tbody {
-  display: block; 
-  max-height: 90vh; 
+  display: block;
+  max-height: 90vh;
   overflow-y: auto;
 }
 
@@ -259,21 +261,18 @@ color: rgb(236, 134, 219);
 }
 
 .more-info .table td:nth-child(2) {
-
   width: 40%;
   text-align: left;
 }
 
-.more-info .table  td:nth-child(3) {
+.more-info .table td:nth-child(3) {
   width: 40%;
   text-align: right;
 }
 
-
 .more-info .icon {
   font-size: 1rem;
 }
-
 
 .more-info tr {
   display: table;
@@ -290,23 +289,110 @@ color: rgb(236, 134, 219);
 
 
 
+.sk-folding-cube {
+  margin: 20px auto;
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  bottom: 100px;
+  left: 100px;
+  z-index: 100000;
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
+}
+
+.sk-folding-cube .sk-cube {
+  float: left;
+  width: 50%;
+  height: 50%;
+  position: relative;
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1); 
+}
+.sk-folding-cube .sk-cube:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: blue;
+  -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
+          animation: sk-foldCubeAngle 2.4s infinite linear both;
+  -webkit-transform-origin: 100% 100%;
+      -ms-transform-origin: 100% 100%;
+          transform-origin: 100% 100%;
+}
+.sk-folding-cube .sk-cube2 {
+  -webkit-transform: scale(1.1) rotateZ(90deg);
+          transform: scale(1.1) rotateZ(90deg);
+}
+.sk-folding-cube .sk-cube3 {
+  -webkit-transform: scale(1.1) rotateZ(180deg);
+          transform: scale(1.1) rotateZ(180deg);
+}
+.sk-folding-cube .sk-cube4 {
+  -webkit-transform: scale(1.1) rotateZ(270deg);
+          transform: scale(1.1) rotateZ(270deg);
+}
+.sk-folding-cube .sk-cube2:before {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+.sk-folding-cube .sk-cube3:before {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s; 
+}
+.sk-folding-cube .sk-cube4:before {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+@-webkit-keyframes sk-foldCubeAngle {
+  0%, 10% {
+    -webkit-transform: perspective(140px) rotateX(-180deg);
+            transform: perspective(140px) rotateX(-180deg);
+    opacity: 0; 
+  } 25%, 75% {
+    -webkit-transform: perspective(140px) rotateX(0deg);
+            transform: perspective(140px) rotateX(0deg);
+    opacity: 1; 
+  } 90%, 100% {
+    -webkit-transform: perspective(140px) rotateY(180deg);
+            transform: perspective(140px) rotateY(180deg);
+    opacity: 0; 
+  } 
+}
+
+@keyframes sk-foldCubeAngle {
+  0%, 10% {
+    -webkit-transform: perspective(140px) rotateX(-180deg);
+            transform: perspective(140px) rotateX(-180deg);
+    opacity: 0; 
+  } 25%, 75% {
+    -webkit-transform: perspective(140px) rotateX(0deg);
+            transform: perspective(140px) rotateX(0deg);
+    opacity: 1; 
+  } 90%, 100% {
+    -webkit-transform: perspective(140px) rotateY(180deg);
+            transform: perspective(140px) rotateY(180deg);
+    opacity: 0; 
+  }
+}
 
 #more-weather-info table {
   min-width: 300px;
 }
 #more-covid-info table {
   min-width: 400px;
-
 }
 
 #more-country-info thead {
   background-color: rgb(21, 0, 255);
- 
 }
 
 #more-weather-info thead {
   background-color: red;
-  
 }
 #more-covid-info thead {
   background-color: green;
@@ -323,15 +409,16 @@ color: rgb(236, 134, 219);
   text-align: center;
 }
 
-.more-info tbody tr:nth-child(odd){
+.more-info tbody tr:nth-child(odd) {
   background-color: rgb(233, 232, 232);
 }
 
-
-tr:last-child td:first-child { border-bottom-left-radius: 10px; }
-tr:last-child td:last-child { border-bottom-right-radius: 10px; }
-
-
+tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
+}
 
 .more-info td {
   padding-top: 18px;
@@ -374,35 +461,20 @@ th {
   margin-top: 10px;
 }
 
-
 /*Media Queries*/
 
-@media only screen and (max-width: 1373px){
-  .more-info{
+@media only screen and (max-width: 1373px) {
+  .more-info {
     top: 50px;
     max-height: 60vh;
   }
 
-  .more-info tbody::-webkit-scrollbar {
-    width: 10px;
-  }
-  .more-info tbody::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-  .more-info tbody::-webkit-scrollbar-thumb {
-    background: #888;
-  }
-  .more-info tbody::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  } 
-
   .more-info tbody {
-    display: block; 
-    max-height: 60vh; 
+    display: block;
+    max-height: 60vh;
     overflow-y: auto;
   }
-  }
-
+}
 
 @media only screen and (max-width: 960px) {
   #navbar {
@@ -412,28 +484,20 @@ th {
   .more-info table {
     width: 100%;
   }
-  
-  .leaflet-control-layers-expanded, .leaflet-control-layers, .leaflet-control{
+
+  .leaflet-control-layers-expanded,
+  .leaflet-control-layers,
+  .leaflet-control {
     z-index: 5000;
   }
-  
+
   .more-info tbody {
-    display: block; 
-    max-height: 40vh; 
+    display: block;
+    max-height: 40vh;
     overflow-y: scroll;
   }
-  
 
-
-  
-
-  
-
-
-
-  
-
-  #navbar select{
+  #navbar select {
     width: 80%;
   }
 
@@ -459,17 +523,15 @@ th {
     min-height: 0;
   }
 
-
-
   #more-country-info table {
     min-width: initial;
   }
-  
+
   #more-weather-info table {
-    min-width:  initial;
+    min-width: initial;
   }
   #more-covid-info table {
-    min-width:  initial;
+    min-width: initial;
     max-width: initial;
   }
 
@@ -477,7 +539,10 @@ th {
     max-width: initial;
   }
 
+  
 
+  .sk-folding-cube{
+    bottom: 48px;
+    left: 10px;
+  }
 }
-
-
